--- a/proteus_api/Dockerfile
+++ b/proteus_api/Dockerfile
@@ -1,6 +1,6 @@
 FROM tiangolo/uvicorn-gunicorn-fastapi:python3.7
 
-COPY requirements.txt ./requirements.txt
+COPY proteus_api/requirements.txt ./requirements.txt
 #Install nvidia-pyindex first to have access to nvidia pypi
 RUN pip install nvidia-pyindex==1.0.4
 RUN pip install -r requirements.txt
@@ -9,4 +9,4 @@ RUN pip install -r requirements.txt
 COPY ./packages /packages
 RUN pip install -r /packages/package_install.txt
 
-COPY ./app /app
+COPY proteus_api/app /app
