--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
           pip install black autoflake isort pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Lint with flake8
+      - name: Lint
         run: |
-          autoflake . --check
+          autoflake . --check --recursive
           black . --check
           isort . --check-only
 
