--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
 
       - name: Lint
         run: |
-          autoflake . --check --recursive
-          black . --check
-          isort . --check-only
+          autoflake --check --recursive .
+          black --check .
+          isort --check-only --multi-line=3 --trailing-comma --force-grid-wrap=0 --use-parentheses --line-width=88 .
 
       - name: Build the docker-compose stack
         run: docker-compose up -d
