--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black autoflake isort pytest
+          pip install black autoflake isort pytest requests
+          pip install ./packages/proteus_datasets/
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint
@@ -37,7 +38,5 @@ jobs:
         run: docker-compose up -d
 
       - name: Test with pytest
-        run: |
-          pip install requests pytest
-          pip install /packages/proteus_datasets/.
+        run: |         
           pytest
