--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black autoflake isort pytest requests
+          pip install black autoflake isort pytest requests Pillow
           pip install ./packages/proteus_datasets/
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
