--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Lint
         run: |
-          autoflake --check --recursive --exclude=/proteus/tools/templating/proteus/tools/templating/templates .
-          black --check .
+          autoflake --check --recursive .
+          black --check --exclude=/tools/templating/proteus/tools/templating/templates .
           isort --check-only --multi-line=3 --trailing-comma --force-grid-wrap=0 --use-parentheses --line-width=88 --diff .
 
       - name: Build the docker-compose stack
