mount packages and reload on change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - triton
     volumes:
       - model-repository:/models
+      - ./packages:/packages
     environment:
       - DEBUG=0
 
