--- a/proteus_api/Dockerfile
+++ b/proteus_api/Dockerfile
@@ -1,12 +1,14 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.7
+FROM python:3.7
+
+RUN pip install fastapi uvicorn
 
 COPY proteus_api/requirements.txt ./requirements.txt
 #Install nvidia-pyindex first to have access to nvidia pypi
 RUN pip install nvidia-pyindex==1.0.4
 RUN pip install -r requirements.txt
 
-#Install model packages
-COPY ./packages /packages
-RUN pip install -r /packages/package_install.txt
+EXPOSE 80
 
 COPY proteus_api/app /app
+
+CMD ["sh","-c","pip install -r /packages/package_install.txt && uvicorn app.main:app --reload --host 0.0.0.0 --port 80"]
