better logging system

--- a/proteus_api/app/logging.conf
+++ b/proteus_api/app/logging.conf
@@ -8,6 +8,7 @@ keys=consoleHandler
 keys=normalFormatter
 
 [logger_root]
+args=('%(logfilename)s',)
 handlers=consoleHandler
 
 [handler_consoleHandler]
