--- a/proteus_api/app/logging.conf
+++ b/proteus_api/app/logging.conf
@@ -1,20 +1,33 @@
 [loggers]
-keys=root
+keys=root,predictions
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler,fileHandler
 
 [formatters]
-keys=normalFormatter
+keys=normalFormatter, predictionFormatter
 
 [logger_root]
 args=('%(logfilename)s',)
 handlers=consoleHandler
 
+[logger_predictions]
+qualname=predictions
+handlers=fileHandler
+
 [handler_consoleHandler]
 class=StreamHandler
 formatter=normalFormatter
 args=(sys.stdout,)
+
+[handler_fileHandler]
+class=FileHandler
+level=INFO
+formatter=predictionFormatter
+args=('/logs/predictions.log', 'a+')
+
+[formatter_predictionFormatter]
+format=%(asctime)s - %(message)s
 
 [formatter_normalFormatter]
 format=%(asctime)s - %(levelname)s - %(name)s - %(message)s
