Model inactive working

--- a/proteus_api/app/logging.conf
+++ b/proteus_api/app/logging.conf
@@ -27,7 +27,7 @@ formatter=predictionFormatter
 args=('/logs/predictions.log', 'a+')
 
 [formatter_predictionFormatter]
-format=%(asctime)s - %(message)s
+format=%(asctime)s|%(message)s
 
 [formatter_normalFormatter]
 format=%(asctime)s - %(levelname)s - %(name)s - %(message)s
