--- a/packages/proteus_efficientnetlite4/proteus/models/efficientnetlite4/config.template
+++ b/packages/proteus_efficientnetlite4/proteus/models/efficientnetlite4/config.template
@@ -14,6 +14,4 @@ output [
     dims: [1, 1000]
   }
 ]
-optimization { execution_accelerators {
-  gpu_execution_accelerator : [ { name : "tensorrt" } ]
-}}
+{{triton_optimization}}
