--- a/packages/proteus_maskrcnn/proteus/models/maskrcnn/config.template
+++ b/packages/proteus_maskrcnn/proteus/models/maskrcnn/config.template
@@ -29,6 +29,4 @@ output [
     dims: [-1]
   }
 ]
-optimization { execution_accelerators {
-  gpu_execution_accelerator : [ { name : "tensorrt" } ]
-}}
+{{triton_optimization}}
