--- a/packages/proteus_yolov4/proteus/models/yolov4/config.template
+++ b/packages/proteus_yolov4/proteus/models/yolov4/config.template
@@ -25,7 +25,5 @@ output [
     dims: [-1, -1, 3, 85]
   }
 ]
-optimization { execution_accelerators {
-  gpu_execution_accelerator : [ { name : "tensorrt" } ]
-}}
+{{triton_optimization}}
 dynamic_batching {}
