--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,16 @@ services:
       - LOGLEVEL=INFO
       - MAX_ACTIVE_MODELS=3
       - MODEL_INACTIVITY=1
+  prometheus:
+    image: prom/prometheus:v2.21.0
+    ports:
+      - 9000:9090
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prometheus-data:/prometheus
+    command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml
 
 volumes:
   model-repository: 
   logs:
+  prometheus-data:
