Dynamic batching if supported by the model

--- a/packages/proteus_retinanet/proteus/models/retinanet/config.template
+++ b/packages/proteus_retinanet/proteus/models/retinanet/config.template
@@ -60,6 +60,4 @@ output [
     dims: [1, 720, 4, 5]
   }
 ]
-optimization { execution_accelerators {
-  gpu_execution_accelerator : [ { name : "tensorrt" } ]
-}}
+{{triton_optimization}}
