--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - LOGLEVEL=INFO
       - MAX_ACTIVE_MODELS=3
       - MODEL_INACTIVITY=1
+      - TRITON_CONCURRENCY=1
   prometheus:
     image: prom/prometheus:v2.21.0
     ports:
