--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
-name: CI
+name: CI for push
 
 # Controls when the action will run. Triggers the workflow on push
 on:
   push:
+    branches:
+      - '*'
+      - '!master'
 
 jobs:
   test:
