--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - MAX_ACTIVE_MODELS=3
       - MODEL_INACTIVITY=1
       - TRITON_CONCURRENCY=1
+      - TRITON_CLIENT_TIMEOUT=300
   prometheus:
     image: prom/prometheus:v2.21.0
     ports:
