Expose some gunicorn vars for easier debugging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - MODEL_INACTIVITY=1
       - TRITON_CONCURRENCY=1
       - TRITON_CLIENT_TIMEOUT=300
+      - TIMEOUT=120 # gunicorn setting
+      - KEEP_ALIVE=2 # gunicorn setting
   prometheus:
     image: prom/prometheus:v2.21.0
     ports:
