Small fix to the templating

--- a/tools/templating/proteus/tools/templating/templates/proteus.models.{{cookiecutter.package_name}}/proteus/models/{{cookiecutter.package_name}}/config.template
+++ b/tools/templating/proteus/tools/templating/templates/proteus.models.{{cookiecutter.package_name}}/proteus/models/{{cookiecutter.package_name}}/config.template
@@ -1,3 +1,4 @@
+{% raw %}
 platform: "onnxruntime_onnx"
 max_batch_size : 0
 input [
@@ -7,3 +8,4 @@ output [
 {{triton_optimization}}
 {{dynamic_batching}}
 {{num_instances}}
+{% endraw %}
