--- a/packages/proteus.models.superres/proteus/models/superres/config.template
+++ b/packages/proteus.models.superres/proteus/models/superres/config.template
@@ -1,19 +1,19 @@
 
 platform: "onnxruntime_onnx"
-max_batch_size : 0
+max_batch_size : 10
 input [
   {
     name: "input"
     data_type: TYPE_FP32
     format: FORMAT_NONE
-    dims: [-1, 1, 224, 224]
+    dims: [1, 224, 224]
   }
 ]
 output [
   {
     name: "output"
     data_type: TYPE_FP32
-    dims: [-1, 1, 672, 672]
+    dims: [1, 672, 672]
   }
 ]
 {{triton_optimization}}
