--- a/packages/proteus.models.efficientpose/proteus/models/efficientpose/config.template
+++ b/packages/proteus.models.efficientpose/proteus/models/efficientpose/config.template
@@ -1,9 +1,20 @@
 
 platform: "onnxruntime_onnx"
-max_batch_size : 0
+max_batch_size : 10
 input [
+  {
+    name: "input"
+    data_type: TYPE_FP32
+    format: FORMAT_NONE
+    dims: [3, 224, 224]
+  }
 ]
 output [
+  {
+    name: "output"
+    data_type: TYPE_FP32
+    dims: [16, 224, 224]
+  }
 ]
 {{triton_optimization}}
 {{dynamic_batching}}
