--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip<=20.2
           pip install black autoflake isort pytest requests Pillow
           pip install nvidia-pyindex==1.0.4
           if [ -f test_requirements.txt ]; then pip install -r test_requirements.txt; fi
