Old pip resolver

--- a/proteus_api/Dockerfile
+++ b/proteus_api/Dockerfile
@@ -3,6 +3,10 @@ FROM python:3.7
 RUN pip install fastapi uvicorn
 
 COPY proteus_api/requirements.txt ./requirements.txt
+
+# to be sure, old pip resolver
+RUN python -m pip install --upgrade pip==20.2
+
 #Install nvidia-pyindex first to have access to nvidia pypi
 RUN pip install nvidia-pyindex==1.0.4
 RUN pip install -r requirements.txt
