--- a/packages/proteus_mobilenet/proteus/models/mobilenet/config.template
+++ b/packages/proteus_mobilenet/proteus/models/mobilenet/config.template
@@ -2,16 +2,16 @@ platform: "onnxruntime_onnx"
 max_batch_size : 0 
 input [
   {
-    name: "data"
+    name: "input"
     data_type: TYPE_FP32
     dims: [1, 3, 224, 224]
   }
 ]
 output [
   {
-    name: "mobilenetv20_output_flatten0_reshape0"
+    name: "output"
     data_type: TYPE_FP32
-    dims: [1, 1000]
+    dims: [-1, 1000]
   }
 ]
 {{triton_optimization}}
