Test everything again, but slow in separate task

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,7 @@ jobs:
       - name: Test with pytest
         run: |         
           pytest -s --ignore=tools/templating/proteus/tools/templating/templates -m "not slow"
+
+      - name: Test slow tests with pytest
+        run: |         
+          pytest -s --ignore=tools/templating/proteus/tools/templating/templates -m "slow"
